---
source: crates/ruff/src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    name: BadQuotesMultilineString
    body: Double quote multiline found but single quotes preferred
    suggestion: Replace double multiline quotes with single quotes
    fixable: true
  location:
    row: 5
    column: 0
  end_location:
    row: 7
    column: 3
  fix:
    edits:
      - location:
          row: 5
          column: 0
        end_location:
          row: 7
          column: 3
        content: "'''\nthis is not a docstring\n'''"
  parent: ~
- kind:
    name: BadQuotesMultilineString
    body: Double quote multiline found but single quotes preferred
    suggestion: Replace double multiline quotes with single quotes
    fixable: true
  location:
    row: 16
    column: 4
  end_location:
    row: 18
    column: 7
  fix:
    edits:
      - location:
          row: 16
          column: 4
        end_location:
          row: 18
          column: 7
        content: "'''\n    this is not a docstring\n    '''"
  parent: ~
- kind:
    name: BadQuotesMultilineString
    body: Double quote multiline found but single quotes preferred
    suggestion: Replace double multiline quotes with single quotes
    fixable: true
  location:
    row: 21
    column: 20
  end_location:
    row: 22
    column: 37
  fix:
    edits:
      - location:
          row: 21
          column: 20
        end_location:
          row: 22
          column: 37
        content: "'''\n        definitely not a docstring'''"
  parent: ~
- kind:
    name: BadQuotesMultilineString
    body: Double quote multiline found but single quotes preferred
    suggestion: Replace double multiline quotes with single quotes
    fixable: true
  location:
    row: 30
    column: 8
  end_location:
    row: 32
    column: 11
  fix:
    edits:
      - location:
          row: 30
          column: 8
        end_location:
          row: 32
          column: 11
        content: "'''\n        this is not a docstring\n        '''"
  parent: ~
- kind:
    name: BadQuotesMultilineString
    body: Double quote multiline found but single quotes preferred
    suggestion: Replace double multiline quotes with single quotes
    fixable: true
  location:
    row: 35
    column: 12
  end_location:
    row: 37
    column: 15
  fix:
    edits:
      - location:
          row: 35
          column: 12
        end_location:
          row: 37
          column: 15
        content: "'''\n            Looks like a docstring, but in reality it isn't - only modules, classes and functions\n            '''"
  parent: ~

